--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
-
 <body>
   <header>
-    <section class="bgBlack">
-      <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-          <a class="titulo navbar-brand fw-bold link-light fs-1 mx-5" href="#">Shanei Tattoo</a>
+    <section class="bgBlack fixed-top">
+      <nav class="navbar navbar-expand-lg ">
+        <div class="container-fluid fw-bolder">
+          <a class="titulo navbar-brand link-light fs-1 mx-5" href="#">Shanei Tattoo</a>
           <div class="navTitulo collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -152,39 +151,36 @@
     </section>
     <section class="serviShanei bgBlack p-1">
       <h3 class="text-center fs-1 fs-italic fw-bold m-5">Servicios</h3>
-      <h6 class="text-center fs-6"> SHANEI TATTOO ESTUDIO</h6>
+      <h6 class="text-center fs-6 text-decoration-underline"> SHANEI TATTOO ESTUDIO</h6>
       <div class="imgServi">
-        <img src="imagenes/brazo1.jpg" class="m-4" alt="" srcset="">
-        <img src="imagenes/brazo1.jpg" class="m-4" alt="" srcset="">
+        <img src="imagenes/tattoo.servi.jpg" class="m-4" alt="" srcset="">
+        <img src="imagenes/piercing.png" class="m-4" alt="" srcset="">
       </div>
       <div class="linkServi">
-        <a href="http://" class="mx-4 px-5 text-decoration-none">Tattos</a>
-        <a href="http://" class="mx-4 px-5 text-decoration-none">Piercing</a>
+        <a href="http://" class="me-5 pe-5">Tattos</a>
+        <a href="http://" class="ms-5 ps-5">Piercing</a>
       </div>
-    </section>
+    </section >
     <section class="nosoShanei">
       <div class="texShanei">
-        <h3 class="nosEstudio">NOSOTROS</h3>
-        <p class="nosParrafo">Somos un estudio de tatuajes y micropigmentación que amamos este arte. Surgimos de la idea
-          de fundar un lugar agradable y óptimo donde poder desarrollar los diseños, todos realizados a mano y únicos,
+        <button class="nosEstudio">Nosotros</button>
+        <span  class="nosParrafo">Somos un estudio de <span style="color: red;"> tatuajes y piercing </span>que amamos este arte. Surgimos de la idea
+          de fundar un lugar agradable y óptimo donde poder desarrollar los diseños que tanto les gustan,
           para ofrecer la mayor calidad y experiencia a nuestros clientes.
-
-          ​
-
-          Cada uno de los diseños es único e intransferible con el objetivo de proyectar una pieza única en tu cuerpo.
-          Si tienes una idea nosotros la hacemos única.
-
-          Trabajamos con varios estilos: Black Work, Lineal, Realismo, Trash Polka, etc.
-
-          Al igual que la calidad de los mismos, para nosotros también es importante el trato al cliente, sea cual sea
+          <p></p>
+          Realizamos diseños unicos y personalizados con el objetivo de proyectar una pieza unica en tu cuerpo.  
+          <span style="font-size:19px ;color:red">Si lo pueden imaginar nosotros lo podemos tatuar</span>
+          <p></p>
+          Trabajamos con varios estilos: <span style="color: red">Realismo, Trival, Black and Grey, Minitattoo, etc.</span>
+          <p>Al igual que la calidad de los mismos, para nosotros también es importante el trato al cliente, sea cual sea
           el tatuaje que se quiera realizar. Queremos que disfrutes de una buena experiencia y para ello tenemos todo lo
-          necesario para que sea así.
+          necesario para que sea así.</p>
+          <p></p>
+          También disponemos de una sección exclusiva dedicada a los cover llamada <span style="color:red">¿PODRA NAHUEL?</span>, en la cual buscamos una segunda oportunidad 
+          a ese tattoo que NO quedo como querias!
+          <p></p> <span>Por ultimo pero no menos importante, tenemos el sector de <span style="color:red;">PIERCING</span>, donde podes realizarte el que mas desees. <span style="color:red;">Septum, Nostril, Lóbulo, Tongue,Nipple, etc.</span></span>
 
 
-
-          También disponemos de una sección dedicada a la micropigmentación y derivados, con una de las mayores expertas
-          en el sector. Dicha profesional se ha formado y trabajado en los mejores centros, tanto a nivel nacional como
-          internacional, para ofrecer el mejor servicio.</p> 
       </div>
     </section>
     <section>
@@ -199,11 +195,11 @@
           </select>
         </div>
     </section>
-    <section>
+    <section class="estilo">
       <div class="tituEstilo">
         <h3>ESTILOS</h3>
       </div>
-      <div class="card mb-3">
+      <div class="card">
         <div class="row g-0">
           <div class="col-md-6">
             <div id="carouselExampleFade" class="carousel slide carousel-fade ">
@@ -232,8 +228,8 @@
           </div>
           <div class="col-md-6 textEstilo">
             <div class="card-body ">
-              <h5 class="card-title ">REALISMO</h5>
-              <p class="card-text ">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
+              <h3 class="card-title p-4 text-light">REALISMO</h3>
+              <p class="card-text p-4 fs-2 text-light">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
                 cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
                 realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
                 definición.</p>
@@ -241,11 +237,11 @@
           </div>
         </div>
       </div>
-      <div class="card mb-3">
+      <div class="card">
         <div class="row g-0">
           <div class="col-md-6 textEstilo">
             <div class="card-body">
-              <h5 class="card-title">REALISMO</h5>
+              <h3 class="card-title">REALISMO</h3>
               <p class="card-text">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
                 cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
                 realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
@@ -277,7 +273,7 @@
           </div>
         </div>
       </div>
-      <div class="card mb-3">
+      <div class="card">
         <div class="row g-0">
           <div class="col-md-6">
             <div id="carouselExampleFade" class="carousel slide carousel-fade ">
@@ -306,7 +302,7 @@
           </div>
           <div class="col-md-6 textEstilo">
             <div class="card-body ">
-              <h5 class="card-title ">REALISMO</h5>
+              <h3 class="card-title ">REALISMO</h3>
               <p class="card-text ">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
                 cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
                 realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
@@ -317,7 +313,7 @@
       </div>
     </section>
     <section>
-      <div class="tituPreg"><h4>Preguntas Frecuentes</h4></div>
+      <div class="tituPreg"><h3>Preguntas Frecuentes</h3></div>
       <div class="container m-5 acorPreg">
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
