--- a/index.html
+++ b/index.html
@@ -205,13 +205,87 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade ">
               <div class="carousel-inner imgEstilo">
                 <div class="carousel-item active ">
-                  <img src="imagenes/tigre.artista.jpeg" class="d-block w-100 " alt="...">
+                  <img src="imagenes/realismo1.jpg" class="d-block w-100 " alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="imagenes/aye.artista.jpeg" class="d-block w-100" alt="...">
+                  <img src="imagenes/realismo2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="imagenes/luna.piercing.jpeg" class="d-block w-100" alt="...">
+                  <img src="imagenes/realismo3.JPG" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+          <div class="col-md-6 textEstilo">
+            <div class="card-body">
+              <h3 class="card-title p-4 fs-1">REALISMO</h3>
+              <p class="card-text p-4">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
+                cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
+                realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
+                definición.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row g-0">
+          <div class="col-md-6 textEstilo">
+            <div class="card-body">
+              <h3 class="card-title p-4 fs-1">LINEAL y MANDALAS</h3>
+              <p class="card-text p-4">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
+                cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
+                realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
+                definición.</p>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade">
+              <div class="carousel-inner imgEstilo">
+                <div class="carousel-item active">
+                  <img src="imagenes/lineal1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/lineal2.JPG" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/lineal3.JPG" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="row g-0">
+          <div class="col-md-6">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade ">
+              <div class="carousel-inner imgEstilo">
+                <div class="carousel-item active ">
+                  <img src="imagenes/black3.jpg" class="d-block w-100 " alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/black2.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="imagenes/black1.JPG" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -228,8 +302,8 @@
           </div>
           <div class="col-md-6 textEstilo">
             <div class="card-body ">
-              <h3 class="card-title p-4 text-light">REALISMO</h3>
-              <p class="card-text p-4 fs-2 text-light">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
+              <h3 class="card-title p-4 fs-1">BLACK AND GREY</h3>
+              <p class="card-text p-4">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
                 cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
                 realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
                 definición.</p>
@@ -241,8 +315,8 @@
         <div class="row g-0">
           <div class="col-md-6 textEstilo">
             <div class="card-body">
-              <h3 class="card-title">REALISMO</h3>
-              <p class="card-text">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
+              <h3 class="card-title p-4 fs-1">¿PODRA NAHUEL?</h3>
+              <p class="card-text p-4 ">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
                 cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
                 realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
                 definición.</p>
@@ -273,62 +347,24 @@
           </div>
         </div>
       </div>
-      <div class="card">
-        <div class="row g-0">
-          <div class="col-md-6">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade ">
-              <div class="carousel-inner imgEstilo">
-                <div class="carousel-item active ">
-                  <img src="imagenes/tigre.artista.jpeg" class="d-block w-100 " alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="imagenes/aye.artista.jpeg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="imagenes/luna.piercing.jpeg" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-          <div class="col-md-6 textEstilo">
-            <div class="card-body ">
-              <h3 class="card-title ">REALISMO</h3>
-              <p class="card-text ">Como su nombre indica su finalidad es buscar la mayor proximidad al detalle que el
-                cliente requiera. Se puede configurar en distintos niveles de realismo. Siempre aconsejaremos
-                realizarlos en negro, y sus variantes, dado que el color a lo largo de los años pierde detalle y
-                definición.</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </section>
-    <section>
+    <section class="pregFre py-5">
       <div class="tituPreg"><h3>Preguntas Frecuentes</h3></div>
-      <div class="container m-5 acorPreg">
+      <div class="container m-5">
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              <button class="accordion-button collapsed acorPreg" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                 Que necesito para pedir presupuesto
               </button>
             </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+            <div id="flush-collapseOne" class="accordion-collapse collapse acorPreg" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body ">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              <button class="accordion-button collapsed acorPreg" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
                 Cuales son los cuidados para una correcta curacion
               </button>
             </h2>
