--- a/index.html
+++ b/index.html
@@ -5,25 +5,16 @@
   <title>Shanei Tattoo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-
-  <!-- Bootstrap CSS v5.2.1 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
-  <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"
     crossorigin="anonymous">
-
-  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Abril+Fatface&family=Dancing+Script:wght@400;500;600;700&family=Raleway:wght@100;300;400;600;700;900&family=Notable&family=Sancreek&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Abril+Fatface&family=Dancing+Script:wght@400;500;600;700&family=Raleway:wght@100;300;400;600;700;900&family=Notable&family=Sancreek&display=swap"
     rel="stylesheet">
-
-  <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-
-  <!-- Local CSS -->
   <link rel="stylesheet" href="shanei.css">
 </head>
 
@@ -33,11 +24,11 @@
       <div class="nav-left">
         <button class="menu-icon"><i class="fa-solid fa-bars"></i></button>
         <h1 class="titulo animate__animated animate__backInRight"><a href="index.html">Shanei
-          Tattoo</a></h1>
+            Tattoo</a></h1>
       </div>
       <nav class="navbar">
         <ul class="nav-center">
-          <li><a href="#artistas" >Artistas</a></li>
+          <li><a href="#artistas">Artistas</a></li>
           <li><a href="#servi">Servicios</a></li>
           <li><a href="#noso">Nosotros</a></li>
           <li><a href="#tattoo">Tatuajes</a></li>
@@ -45,15 +36,14 @@
           <li><a href="#pregFrec">Preguntas Frecuentes</a></li>
         </ul>
       </nav>
-        <div class="nav-right">
-          <a href="https://www.instagram.com/shaneitattoo/"
-          class="fa-brands fa-instagram fa-beat text-decoration-none" style="color: #eaecf0;"></a>
+      <div class="nav-right">
+        <a href="https://www.instagram.com/shaneitattoo/" class="fa-brands fa-instagram fa-beat text-decoration-none"
+          style="color: #eaecf0;" target="_blank"></a>
         <a href="https://www.facebook.com/profile.php?id=100089136139229"
-          class="fa-brands fa-facebook fa-beat text-decoration-none" style="color: #eaecf0;"></a>
-        <a href="https://wa.me/1155658086?text=¡Estoy+interesado!"
-          class="fa-brands fa-whatsapp fa-beat text-decoration-none" style="color: #eaecf0;"></a>
-        </div>
-
+          class="fa-brands fa-facebook fa-beat text-decoration-none" style="color: #eaecf0;" target="_blank"></a>
+        <a href="https://wa.me/1132614027?text=¡Estoy+interesado!"
+          class="fa-brands fa-whatsapp fa-beat text-decoration-none" style="color: #eaecf0;" target="_blank"></a>
+      </div>
     </section>
   </header>
   <main>
@@ -69,22 +59,22 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/logoShanei.png" class="d-block w-100" alt="...">
+            <img src="imagenes/shaneitattoo.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5 class="imgCarousel1 animate__animated animate__lightSpeedInRight">EL MEJOR ESTUDIO DE ZONA SUR</h5>
+              <h2 class="imgCarousel1 animate__animated animate__lightSpeedInRight">EL MEJOR ESTUDIO DE ZONA SUR</h2>
             </div>
           </div>
           <div class="carousel-item">
             <img src="imagenes/carousel2.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Tatuadores Profesionales</h5>
+              <h2>Tatuadores Profesionales</h2>
               <p>Todos somos egresados del E.B.A. LOLA MORA</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="imagenes/carousel3.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Insumos de Primera calidad</h5>
+              <h2>Insumos de Primera calidad</h2>
               <p></p>
             </div>
           </div>
@@ -111,83 +101,75 @@
             <h3>Nahuel</h3>
             <hr />
             <div class="intro">Tattoer Profesional</div>
-          </div><!-- /.title-content -->
+          </div>
           <div class="card-info">
             <a href="https://www.instagram.com/nahuel.shaneitattoo/"
               class="fa-brands fa-instagram fs-1 m-2 text-decoration-none" style="color: #fff;" target="_blank"></a>
             <a href="https://www.facebook.com/shanei.shanei.184"
               class="fa-brands fa-facebook fs-1 mb-3 text-decoration-none" style="color: #fff;" target="_blank"></a>
-          </div><!-- /.card-info -->
-        </div><!-- /.blog-card -->
-
+          </div>
+        </div>
         <div class="blog-card spring-fever" id="ayelen">
           <div class="title-content">
             <h3>Ayelén</h3>
             <hr />
             <div class="intro">Tattoer y Piercing</div>
-          </div><!-- /.title-content -->
+          </div>
           <div class="card-info">
             <a href="https://www.instagram.com/ayelengarciatatts/"
               class="fa-brands fa-instagram fs-1 m-2 text-decoration-none" style="color: #fff;" target="_blank"></a>
             <a href="https://www.facebook.com/profile.php?id=100044220258691"
               class="fa-brands fa-facebook fs-1 mb-3 text-decoration-none" style="color: #fff;" target="_blank"></a>
-          </div><!-- /.card-info -->
-        </div><!-- /.blog-card -->
-
+          </div>
+        </div>
         <div class="blog-card spring-fever" id="shulian">
           <div class="title-content">
             <h3>Shulian</h3>
             <hr />
             <div class="intro">Tattoer</div>
-          </div><!-- /.title-content -->
+          </div>
           <div class="card-info">
             <a href="https://www.instagram.com/shulian_ray/"
               class="fa-brands fa-instagram fs-1 m-2 text-decoration-none" style="color: #fff;" target="_blank"></a>
             <a href="https://www.facebook.com/julioGibson" class="fa-brands fa-facebook fs-1 mb-3 text-decoration-none"
               style="color: #fff;" target="_blank"></a>
-          </div><!-- /.card-info -->
-        </div><!-- /.blog-card -->
-
+          </div>
+        </div>
         <div class="blog-card spring-fever" id="agus">
           <div class="title-content">
             <h3>Agus</h3>
             <hr />
             <div class="intro">Tattoer</div>
-          </div><!-- /.title-content -->
+          </div>
           <div class="card-info">
             <a href="https://www.instagram.com/agus_garciaatatts/"
               class="fa-brands fa-instagram fs-1 m-2 text-decoration-none" style="color: #fff;" target="_blank"></a>
             <a href="https://www.facebook.com/profile.php?id=100062618983632"
               class="fa-brands fa-facebook fs-1 mb-3 text-decoration-none" style="color: #fff;" target="_blank"></a>
-          </div><!-- /.card-info -->
-        </div><!-- /.blog-card -->
-
+          </div>
+        </div>
       </div>
-
     </section>
     <section class="serviShanei p-1" id="servi">
       <h2>Servicios</h2>
       <div class="servi-modal">
         <div class="imgServi">
-          <img src="imagenes/tattoo.servi.jpg" alt="" srcset="" onclick="openModal('tattos', event)">
+          <img src="imagenes/tattoo-portada2.jpeg" alt="" srcset="" onclick="openModal('tattos', event)">
           <div class="linkServi">
             <button>Tattoos</button>
           </div>
         </div>
-
         <div class="imgServi">
-          <img src="imagenes/piercing.png" alt="" srcset="" onclick="openModal('piercing', event)">
+          <img src="imagenes/piercing-portada.jpg" alt="" srcset="" onclick="openModal('piercing', event)">
           <div class="linkServi">
             <button>Piercing</button>
           </div>
         </div>
-
         <div id="modal-tattos" class="modal">
           <div class="modal-content">
             <span class="modal-close" onclick="closeModal('modal-tattos')">&times;</span>
             <h3 style="color: black;">Tattos</h3>
             <div class="modal-imagenes">
-              <!-- Coloca aquí las 10 fotos para Tattos -->
               <img src="imagenes/tattos/modal1.JPG" alt="Tatto 1">
               <img src="imagenes/tattos/modal2.JPG" alt="Tatto 2">
               <img src="imagenes/tattos/modal3.JPG" alt="Tatto 3">
@@ -199,15 +181,11 @@
             </div>
           </div>
         </div>
-
-        <!-- Modal para Piercing -->
         <div id="modal-piercing" class="modal">
           <div class="modal-content">
             <span class="modal-close" onclick="closeModal('modal-piercing')">&times;</span>
             <h3 style="color: black;">Piercing</h3>
-            <!-- Coloca aquí las 10 fotos para Piercing -->
             <div class="modal-imagenes">
-              <!-- Coloca aquí las 10 fotos para Tattos -->
               <img src="imagenes/piercing/piercing1.jpg" alt="Tatto 1">
               <img src="imagenes/piercing/piercing2.jpg" alt="Tatto 2">
               <img src="imagenes/piercing/piercing3.jpg" alt="Tatto 3">
@@ -220,34 +198,24 @@
           </div>
         </div>
       </div>
-
     </section>
     <section class="nosoShanei" id="noso">
       <h2>NOSOTROS</h2>
       <div class="texShanei">
-        <iframe src="imagenes/video-shaneita.mp4" frameborder="0"></iframe>
-        <span class="nosParrafo">Somos un estudio de <span style="color: red;"> tatuajes y piercing </span>que amamos
-          este arte. Surgimos de la idea
-          de fundar un lugar agradable y óptimo donde poder desarrollar los diseños que tanto les gustan,
-          para ofrecer la mayor calidad y experiencia a nuestros clientes.
+        <iframe src="imagenes/video-shaneitattoo.mp4" frameborder="0"></iframe>
+        <span class="nosParrafo">Somos un estudio de <span style="color: #e03616"> tatuajes y piercing </span>que amamos este arte. Surgimos de la idea de fundar un lugar agradable y óptimo donde poder desarrollar los diseños que tanto les gustan, ofreciendo la mayor calidad y experiencia a nuestros clientes.
           <p></p>
-          Realizamos diseños unicos y personalizados con el objetivo de proyectar una pieza unica en tu cuerpo.
-          <span style="color:red">Si lo pueden imaginar nosotros lo podemos tatuar</span>
+          Realizamos diseños únicos y personalizados con el objetivo de plasmar una pieza única en tu cuerpo.
+          <span style="color:#e03616">Si puedes imaginarlo, ¡Nosotros podemos tatuarlo!</span>
           <p></p>
-          Trabajamos con varios estilos: <span style="color: red">Realismo, Trival, Black and Grey, Minitattoo,
-            etc.</span>
-          <p>Al igual que la calidad de los mismos, para nosotros también es importante el trato al cliente, sea cual
-            sea
-            el tatuaje que se quiera realizar. Queremos que disfrutes de una buena experiencia y para ello tenemos todo
-            lo
-            necesario para que sea así.</p>
+          Trabajamos con varios estilos, como <span style="color: #e03616">Realismo, Tribal, Black and Grey, Minitattoo, etc. </span>
+          <span>Nos enorgullecemos de la calidad de nuestros trabajos, y para nosotros, el trato al cliente es igualmente importante, independientemente del tatuaje que desees realizar. Queremos que disfrutes de una excelente experiencia, y para lograrlo, contamos con todo lo necesario.</span>
           <p></p>
-          También disponemos de una sección exclusiva dedicada a los cover llamada <span style="color:red">¿PODRA
-            NAHUEL?</span>, en la cual buscamos una segunda oportunidad
-          a ese tattoo que NO quedo como querias!
-          <p></p> <span>Por ultimo pero no menos importante, tenemos el sector de <span
-              style="color:red;">PIERCING</span>, donde podes realizarte el que mas desees. <span
-              style="color:red;">Septum, Nostril, Lóbulo, Tongue,Nipple, etc.</span></span>
+          También disponemos de una sección exclusiva dedicada a los cover, llamada <span style="color:#e03616">"¿PODRA NAHUEL?"</span>, en la cual buscamos dar una segunda oportunidad a ese tatuaje que NO quedó como querías.
+          <p></p> <span>Por último, pero no menos importante, tenemos el sector de <span
+              style="color:#e03616">PIERCING</span>, donde puedes realizarte el que más desees: <span
+              style="color:#e03616">Septum, Nostril, Lóbulo, Tongue,Nipple, etc.</span></span>
+          <p></p> <span>¡Te invitamos a conocernos y experimentar la pasión y dedicación que ponemos en cada uno de nuestros trabajos!</span>
       </div>
     </section>
     <section id="galeria">
@@ -255,11 +223,11 @@
         <div class="tatuadores">
           <h3>Nuestros Trabajos</h3>
           <div class="botones">
-            <button type="button" class="btn btn-outline-dark" onclick="mostrarImagenes('todos')">Todos</button>
-            <button type="button" class="btn btn-outline-dark" onclick="mostrarImagenes('nahuel')">Nahuel</button>
-            <button type="button" class="btn btn-outline-dark" onclick="mostrarImagenes('ayelen')">Ayelen</button>
-            <button type="button" class="btn btn-outline-dark" onclick="mostrarImagenes('shulian')">Shulian</button>
-            <button type="button" class="btn btn-outline-dark" onclick="mostrarImagenes('agustina')">Agustina</button>
+            <button type="button" class="btn-red " onclick="mostrarImagenes('todos')">Todos</button>
+            <button type="button" class="btn-red " onclick="mostrarImagenes('nahuel')">Nahuel</button>
+            <button type="button" class="btn-red " onclick="mostrarImagenes('ayelen')">Ayelen</button>
+            <button type="button" class="btn-red " onclick="mostrarImagenes('shulian')">Shulian</button>
+            <button type="button" class="btn-red " onclick="mostrarImagenes('agustina')">Agustina</button>
           </div>
         </div>
         <div class="grid-gallery">
@@ -358,7 +326,8 @@
               <h3>¿Como se pide un turno?<span><i class="fa-solid fa-angle-down"></i></span></h3>
             </div>
             <div class="accordion-contant">
-              <p>Para poder pedir un turno se pide una seña del %10 del tattoo, luego de enviado el comprobante abrimos la agenda y coordinamos al reserva.</p>
+              <p>Para poder pedir un turno se pide una seña del %10 del tattoo, luego de enviado el comprobante abrimos
+                la agenda y coordinamos al reserva.</p>
             </div>
           </div>
           <div class="accordion-item">
@@ -366,7 +335,8 @@
               <h3>¿Cuales son los medios de pago? <span><i class="fa-solid fa-angle-down"></i></span></h3>
             </div>
             <div class="accordion-contant">
-              <p>Aceptamos efectivo, tarjeta de debito/credito, transferencia bancaria y mercadopago, tanto para la seña como para el pago total.</p>
+              <p>Aceptamos efectivo, tarjeta de debito/credito, transferencia bancaria y mercadopago, tanto para la seña
+                como para el pago total.</p>
             </div>
           </div>
           <div class="accordion-item">
@@ -374,7 +344,8 @@
               <h3> ¿Como armo mi presupuesto?<span><i class="fa-solid fa-angle-down"></i></span></h3>
             </div>
             <div class="accordion-contant">
-              <p>Simplemente con 3 referencias lo podemos armar. Lugar del cuerpo donde te vas a tatuar, tamaño en cm del tattoo y el Diseño.</p>
+              <p>Simplemente con 3 referencias lo podemos armar. Lugar del cuerpo donde te vas a tatuar, tamaño en cm
+                del tattoo y el Diseño.</p>
             </div>
           </div>
         </div>
@@ -387,17 +358,14 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.76301552364!2d-58.449891524171804!3d-34.73636746451604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccde9dd74e53f%3A0x7a1afa888918f478!2sShanei%20Artes%20Tattoo%20Estudio!5e0!3m2!1ses-419!2sar!4v1689788066998!5m2!1ses-419!2sar"
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
       </div>
-
     </section>
-
-
     <section id="contacto">
       <div class="contacto">
         <h3><i class="fa-brands fa-whatsapp"></i> WHATSAPP</h3>
-        <h4>1155556555</h4>
-        <h3><i class="fa-solid fa-map-location-dot"></i> UBICACION</h3>
+        <h4>11-3261-4027</h4>
+        <h3><i class="fa-solid fa-map-location-dot"></i> UBICACIÓN</h3>
         <h4>Marsella 2225, Banfield</h4>
-        <h4><i class="fa-regular fa-envelope"></i> shaneitattoo@gmail.com</h4>
+        <h4><i class="fa-regular fa-envelope"></i> turnos@shaneitattoo.com</h4>
         <h3><i class="fa-regular fa-clock"></i> Horarios</h3>
         <h4>Lunes a viernes 9hs a 21hs</h4>
         <h4>Sabado 10hs a 20hs</h4>
@@ -408,28 +376,24 @@
           <h3>CONTACTANOS</h3>
           <div class="mb-3">
             <label for="nombre" class="form-label"></label>
-            <input type="text" class="form-control" id="nombre" placeholder="Nombre" name="nombre" required>
+            <input type="text" class="form-control" id="nombre" placeholder="Nombre" name="nombre" autocomplete="name" required>
           </div>
 
           <div class="mb-3">
             <label for="telefono" class="form-label"></label>
-            <input type="tel" class="form-control" id="telefono" placeholder="Telefono" name="telefono" required>
+            <input type="tel" class="form-control" id="telefono" placeholder="Telefono" name="telefono" autocomplete="tel" required>
           </div>
-
           <div class="mb-3">
             <label for="email" class="form-label"></label>
-            <input type="email" class="form-control" id="email" placeholder="E-mail" name="email" required>
+            <input type="email" class="form-control" id="email" placeholder="E-mail" name="email" autocomplete="email" required>
           </div>
-
           <div class="mb-3">
             <label for="descripcion" class="form-label"></label>
             <textarea class="form-control" id="descripcion" placeholder="Detalle" name="descripcion" rows="4"
               required></textarea>
           </div>
-
           <button type="submit" class="btn btn-dark">Enviar</button>
         </form>
-
       </div>
     </section>
   </main>
@@ -441,7 +405,6 @@
     </div>
     <h3>Producido por Braian Ocampo</h3>
   </footer>
-  <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
@@ -449,8 +412,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
     </script>
-
-
   <script src="shanei.js"></script>
 </body>
 
